# aplicacion_pedidos_multitenant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TODO.md  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  nginx.conf  pyproject.toml  tailwind.config.js
Docs/: AGENTS.md
Docs/Spec/: arquitectura_v2.md
Script/: generate_secrets.sh
alembic/: env.py
alembic/versions/: 0b6aa527a9d3_004_add_password_reset_token.py  20260421_214250_001_initial_schema.py  20260421_220000_002_add_senia_and_estado_pago.py  20260502_120000_003_add_unidad_medida.py  20260502_140000_004_add_rol_repartidor_entrega_eventos.py  20260502_160000_005_add_empresa_branding_fields.py  20260502_180000_006_add_stock_minimo.py  20260502_200000_007_add_cliente_direcciones.py  20260502_220000_008_add_cuenta_corriente.py  20260506_100000_009_hora_entrega_nullable.py  20260506_110000_010_add_ci_column.py  20260508_120000_011_add_numero_pedido.py  20260508_140000_012_add_empresa_rut_direccion_ciudad.py  20260513_150000_013_add_es_automatico_producto.py  20260515_120000_014_add_vehiculo_to_usuarios.py  7c237d1a86e5_001_initial_tables.py  afff0db3b2a2_003_add_empresa_multi_tenant.py  bc7140f965a3_002_add_cliente_producto_pedidoitem_.py
app/: auth.py  config.py  csrf.py  database.py  main.py  middlewares.py  models.py  rate_limiter.py  schemas.py  security_headers.py  template_filters.py  templates_env.py  utils.py
app/api/routers/: admin.py  auth.py  clientes.py  configuracion.py  dashboard.py  onboarding.py  pedidos.py
app/dependencies/: __init__.py  auth_dep.py
app/repositories/: cliente_repo.py  empresa_repo.py  entrega_repo.py  pedido_repo.py  producto_repo.py  usuario_repo.py
app/schemas/: __init__.py
app/schemas/queries/: cliente_insights.py  producto_search.py
app/services/: auth_service.py  configuracion_service.py  email_service.py  onboarding_service.py  password_reset_service.py  pedido_service.py  producto_service.py
app/services/queries/: cliente_insights_service.py  fletero_service.py  producto_search_service.py
app/static/: style.css
app/static/css/: tailwind.css
app/templates/: base.html  buscar.html  dashboard.html  editar_pedido.html  entregas.html  forgot_password.html  imprimir_pedido.html  login.html  mis_entregas.html  nuevo_pedido.html  pedidos.html  registro.html  reset_password.html  stock_bajo.html
app/templates/admin/: administracion.html  usuarios.html
app/templates/admin/partials/: fletero_form.html  producto_form.html  tab_catalogo.html  tab_empresa.html  tab_fleteros.html  tab_usuarios.html  usuario_form.html
app/templates/configuracion/: index.html
app/templates/email/: pedido_update.html
app/templates/partials/: cliente_insights.html  clientes_resultado.html  cuenta_corriente_detalle.html  detalle_pedido.html  deudores_table.html  direcciones_select.html  entrega_card.html  entrega_resultado.html  error.html  pedido_card.html  productos_resultado.html  resultados_busqueda.html  success.html
openspec/: config.yaml
openspec/changes/cliente-insights-cqrs/: design.md  proposal.md  spec.md  tasks.md
openspec/changes/hybrid-product-search/: design.md  proposal.md  spec.md
scripts/: backfill_clientes.py
tests/: conftest.py  test_auth.py  test_auth_critical.py  test_auth_security.py  test_configuracion.py  test_core_business.py  test_cuenta_corriente.py  test_direcciones.py  test_infra.py  test_isolation_security.py  test_models.py  test_multi_tenant.py  test_onboarding.py  test_pedidos_crud.py  test_rate_limiting.py  test_repartidores.py  test_repositories.py  test_routes.py  test_security_critical.py  test_security_low.py  test_security_medium.py  test_stock_bajo.py  test_stock_management.py
