[project]
name = "barraca-pedidos"
version = "1.0.0"
description = "Sistema de pedidos para barraca/ferretería con autenticación segura"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "python-dotenv>=1.0.1",
    "jinja2>=3.1.4",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[argon2]>=1.7.4",
    "python-multipart>=0.0.17",
    "email-validator>=2.2.0",
    "argon2-cffi>=23.1.0",
    "alembic>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# 👉 IMPORTANTE: incluir paquetes reales
[tool.hatch.build.targets.wheel]
packages = ["app"]

# 👉 UV Dev Dependencies (grupo de desarrollo)
[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.1",
    "pytest-cov>=7.1.0",
    "aiosqlite>=0.22.1",
]

# ==================== MYPY ====================
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
no_implicit_reexport = true
strict_equality = true
strict_concatenate = true

[[tool.mypy.overrides]]
module = ["asyncpg", "asyncpg.*", "alembic", "alembic.*"]
ignore_missing_imports = true

# ==================== RUFF ====================
[tool.ruff]
target-version = "py311"
line-length = 120
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E","W","F","I","N","UP","B","A","COM","C4","DTZ","EM","EXE",
    "ISC","ICN","G","PIE","PYI","PT","Q","RSE","RET","SIM","TCH",
    "INT","ERA","PGH","PL","TRY","RUF",
]
ignore = ["COM812", "ISC001"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# ==================== PYTEST ====================
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]